[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
chrono = { version = "0.4" }
flate2 = "1.0"
sysinfo = { version = "0.33.0", default-features = false, features = [
    "system",
] }
